# pils

./: .gitignore  Cargo.toml  README.md  help.md  index.html  main.js  package-lock.json  style.css
.github/workflows/: rust.yml
docs/: main.js
docs/pkg/: package.json  pils_web.d.ts  pils_web.js  pils_web_bg.wasm  pils_web_bg.wasm.d.ts
examples/repl/: README.md  main.rs
pils/: Cargo.toml
pils-web/: Cargo.toml  README.md  index.html  prepare-release.sh
pils-web/src/: lib.rs
pils/src/: builtin.rs  environment.rs  help.rs  lib.rs  qexpr.rs  sexpr.rs  test.rs  value.rs
pils/src/parser/: grammar.pest  mod.rs
pkg/: README.md  package.json  pils.d.ts  pils.js  pils_bg.wasm  pils_bg.wasm.d.ts
repl/: Cargo.toml  README.md
repl/src/: main.rs
src/: builtin.rs  environment.rs  error.rs  eval_error.rs  function.rs  lib.rs  main.rs  qexpr.rs  sexpr.rs  value.rs
src/parser/: grammar.pest  mod.rs
