[package]
name = "slipstream"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
version = "0.1.0"
description = "Super simple lisp inspired by buildyourownlisp.com, in pure Rust."
repository = "https://github.com/barafael/slipstream"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
wasm-bindgen = "0.2.80"

[dependencies]
anyhow = { version = "1.0.56", features = ["std", "backtrace"] }
itertools = "0.10.3"
pest = { version = "2.1.3", features = ["pretty-print"] }
pest_derive = "2.1.0"
