[package]
name = "pils"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
version = "0.1.0"
description = "Super simple lisp inspired by buildyourownlisp.com, in pure Rust."
repository = "https://github.com/barafael/pils"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.10.3"
pest = { version = "2.1.3", features = ["pretty-print"] }
pest_derive = "2.1.0"
thiserror = "1.0.30"
wasm-bindgen = "0.2.80"
