[package]
name = "pils"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
version = "0.1.0"
description = "Super simple lisp inspired by buildyourownlisp.com, in pure Rust."
repository = "https://github.com/barafael/pils"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.68", features = ["std", "backtrace"] }
itertools = "0.10.5"
once_cell = "1.17.0"
pest = { version = "2.5.2", features = ["pretty-print"] }
pest_derive = "2.5.2"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
