[package]
name = "pils-repl"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
version = "0.1.0"
description = "Super simple lisp interpreter inspired by buildyourownlisp.com, in pure Rust."
repository = "https://github.com/barafael/pils"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.56", features = ["std", "backtrace"] }
rustyline = "9.1.2"
pils = { path = "../" }
