[package]
name = "pils-repl"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
version = "0.1.0"
description = "Super simple lisp inspired by buildyourownlisp.com, in pure Rust."
repository = "https://github.com/barafael/pils"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.68", features = ["std", "backtrace"] }
rustyline = "10.0.0"
pils = { path = "../pils" }
